# fatfs

./: .gitignore  Cargo.toml
.cargo/: config
benches/: speed.rs
examples/: dir.rs  fat.rs  gpt.rs
inc/: fat.h  storage.h
src/: bindings.rs  gpt.rs  lib.rs  mutex.rs  storage.rs
src/fat/: boot_sector.rs  cache.rs  dir.rs  file.rs  mod.rs  table.rs  types.rs
src/util/: bitmap.rs  bits.rs  mod.rs
tests/: file_backed.rs
